--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
 
+
+    <section class="nav">
     <img src="media/bicycle.svg" alt="Steve" style="width:120px">
     <!-- <svg height="6em" width="10em" xmlns="http://www.w3.org/2000/svg">
        <text fill="#000" font-family="sans-serif" font-size="1em" x="1em" y="1em">FixMyStreetn\ Data</text>
@@ -29,6 +31,13 @@
           <tspan x="2mm" y="1.9cm">Street</tspan>
         </text>
       </svg>
+      </section>
+
+
+      <section class="main">
+
+
+      </section>
 
   </body>
 </html>
