--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
   <head>
     <meta charset="utf-8">
     <title>FixMyStreet Data</title>
@@ -7,16 +8,16 @@
     <script type="text/javascript" src="script.js"></script>
     <title></title>
   </head>
+
   <body>
 
 
     <section class="nav">
-    <img src="media/bicycle.svg" alt="Steve" style="width:120px">
-    <!-- <svg height="6em" width="10em" xmlns="http://www.w3.org/2000/svg">
+      <img src="media/bicycle.svg" alt="Steve" style="width:120px">
+      <!-- <svg height="6em" width="10em" xmlns="http://www.w3.org/2000/svg">
        <text fill="#000" font-family="sans-serif" font-size="1em" x="1em" y="1em">FixMyStreetn\ Data</text>
     </svg> -->
-    <svg xmlns="http://www.w3.org/2000/svg"
-     xml:lang="en" width="4cm" height="2.7cm">
+      <svg xmlns="http://www.w3.org/2000/svg" xml:lang="en" width="4cm" height="2.7cm">
      <title>Positioning tspan</title>
      <style type="text/css">
         svg {
@@ -31,13 +32,14 @@
           <tspan x="2mm" y="1.9cm">Street</tspan>
         </text>
       </svg>
-      </section>
+    </section>
 
 
-      <section class="main">
+    <section class="main">
 
 
-      </section>
+    </section>
 
   </body>
+
 </html>
