--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>FixMyStreet Data</title>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript" src="script.js"></script>
     <title></title>
@@ -37,6 +38,9 @@
 
     <section class="main">
       <div id="div1">
+      </div>
+
+      <div id="div2">
 
       </div>
 
