--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
      <title>Positioning tspan</title>
      <style type="text/css">
         svg {
-            font-family: serif;
+            font-family: "Open Sans", sans-serif;
             font-size: 12mm;
             fill: #733616;
         }
@@ -45,6 +45,10 @@
       </div>
 
     </section>
+
+    <div class="footer">
+      <p id="sign">ITHS 2018, Putte R-Hinneberg feat. Jon</p>
+    </div>
 
   </body>
 
