--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 
 
     <section class="nav">
+      <nav id="navlinks">
+            <ul id="links">
+              <li>&nbsp;&nbsp;<a href="index.html"><img src="media/Logo_D3.png" style="width: 7%"></a></li>
+              <li><a href="webVR.html"><img src="media/aframe.png" style="width: 10%"></a></li>
+            </ul>
+      </nav>
       <img src="media/bicycle.svg" alt="Steve" style="width:120px">
       <!-- <svg height="6em" width="10em" xmlns="http://www.w3.org/2000/svg">
        <text fill="#000" font-family="sans-serif" font-size="1em" x="1em" y="1em">FixMyStreetn\ Data</text>
@@ -35,7 +41,6 @@
       </svg>
     </section>
 
-
     <section class="main">
       <div id="div1">
       </div>
@@ -47,7 +52,7 @@
     </section>
 
     <div class="footer">
-      
+
     </div>
 
   </body>
