--- a/webVR.html
+++ b/webVR.html
@@ -17,26 +17,6 @@
 
   </head>
   <body>
-    
-    <a-scene>
-    <a-entity position="8 2 8" rotation="0 0 0">
-      <a-entity camera look-controls wasd-controls>
-        <a-entity cursor="fuse: true; fuseTimeout: 500" position="0 0 -2" geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.027" material="color: black; shader: flat" </a-entity>
-        </a-entity>
-        <a-entity light="type: point; color: 'white'; intensity: 0.5" position="20 40 20"></a-entity>
-        <a-entity light="type: point; color: 'white'; intensity: 0.5" position="-20 40 20"></a-entity>
-        <a-sky color="#c8f8e0"></a-sky>
-        <a-entity environment="preset: forest; dressingAmount: 500"> </a-entity>
-  </a-scene>
-
-  <script>
-    // Lämpliga initieringar för respektive stapel, genom jQuery.
-    $(".bar").each(function() {
-      this.components.material.material.alphaTest = 0.5;
-      this.components.material.material.depthWrite = false;
-      this.components.material.material.needsUpdate = true;
-    });
-  </script>
 
     <section class="nav">
       <nav id="navlinks">
@@ -65,6 +45,25 @@
         </text>
       </svg>
     </section>
+
+
+    <a-scene class="aframebox" embedded>
+    <a-entity position="8 2 8" rotation="0 0 0">
+      <a-entity camera look-controls wasd-controls>
+        <a-entity cursor="fuse: true; fuseTimeout: 500" position="0 0 -2" geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.027" material="color: black; shader: flat" </a-entity>
+        </a-entity>
+        <a-sky color="#88B337"></a-sky>
+        <!-- <a-entity environment="preset: forest; dressingAmount: 500"> </a-entity> -->
+  </a-scene>
+
+  <script>
+    // Lämpliga initieringar för respektive stapel, genom jQuery.
+    $(".bar").each(function() {
+      this.components.material.material.alphaTest = 0.5;
+      this.components.material.material.depthWrite = false;
+      this.components.material.material.needsUpdate = true;
+    });
+  </script>
 
 
     <div class="footer">
